src/test/test-models/good/var-ending-lpdf.stan
parameters {
  real mu_lpdf;
}
model {
  target += mu_lpdf;
}
