src/test/test-models/bad/reserved/char32_t.stan
data {
  real char32_t;
}
model {
}
